# sber-mahjong

./: CMakeLists.txt
include/: card.h  figureImages.h  screenReader.h
src/: card.cpp  figureImages.cpp  main.cpp  screenReader.cpp
test/: test.cpp
